--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
 		"svelte": "^3.44.0",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sveltefileuploadcomponent": "^0.1.0"
+	}
 }
