--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     environment:
       # please for the love of god, change this
       - ADMIN_LOGIN=admin:admin
+      # location of all files
+      - STORAGE_PATH=/app/storage
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
