--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,8 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
+    
+    client_max_body_size 1024m;
 
     sendfile        on;
 
