(update) support https

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,8 +20,11 @@ http {
     gzip  on;
 
     server {
-        listen       80;
+        listen       443;
         server_name  localhost;
+        ssl_certificate /app/certs/fort.crt;
+        ssl_certificate_key /app/certs/fort.key;
+        ssl_protocols       TLSv1.1 TLSv1.2 TLSv1.3;
 
         location / {
             proxy_pass  http://localhost:4173;
