(fix) make nginx use ssl

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
     gzip  on;
 
     server {
-        listen       443;
+        listen       443 ssl;
         server_name  localhost;
         ssl_certificate /app/certs/fort.crt;
         ssl_certificate_key /app/certs/fort.key;
