(feat) support http/2 in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
     gzip  on;
 
     server {
-        listen       443 ssl;
+        listen       443 ssl http2;
         server_name  localhost;
         ssl_certificate /app/certs/fort.crt;
         ssl_certificate_key /app/certs/fort.key;
