(feat) cache static paths nginx to remove load from server

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,8 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    
+    proxy_cache_path /var/cache/nginx keys_zone=cache:10m;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -29,6 +31,21 @@ http {
         location / {
             proxy_pass  http://localhost:4173;
         }
+        
+        location /_app/ {
+            proxy_cache cache;
+            proxy_cache_valid any 30m;
+            
+            proxy_pass http://localhost:4173/_app/;
+        }
+        
+        location /download/ {
+            proxy_cache cache;
+            proxy_cache_valid any 30s;
+            
+            proxy_pass http://localhost:4173/download/;
+        }
+        
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
