(update) more caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,21 +29,27 @@ http {
         ssl_protocols       TLSv1.1 TLSv1.2 TLSv1.3;
 
         location / {
+            proxy_cache cache;
+            proxy_cache_valid any 1m;
+            add_header Cache-Control "public, max-age=60";
+        
             proxy_pass  http://localhost:4173;
         }
         
         location /_app/ {
             proxy_cache cache;
             proxy_cache_valid any 30m;
+            add_header Cache-Control "public, max-age=1800";
             
             proxy_pass http://localhost:4173/_app/;
         }
         
-        location /download/ {
+        location /api/weather {
             proxy_cache cache;
-            proxy_cache_valid any 30s;
+            proxy_cache_valid any 5m;
+            add_header Cache-Control "public, max-age=300";
             
-            proxy_pass http://localhost:4173/download/;
+            proxy_pass http://localhost:4173/api/weather;
         }
         
         error_page   500 502 503 504  /50x.html;
