(update) more more caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,6 @@ http {
         location / {
             proxy_cache cache;
             proxy_cache_valid any 1m;
-            add_header Cache-Control "public, max-age=60";
         
             proxy_pass  http://localhost:4173;
         }
@@ -42,6 +41,16 @@ http {
             add_header Cache-Control "public, max-age=1800";
             
             proxy_pass http://localhost:4173/_app/;
+        }
+        
+        location /download/ {
+            proxy_cache cache;
+            proxy_cache_valid any 0s;
+        
+            add_header Cache-Control "no-cache";
+            add_header Cache-Control "Expire: 0";
+            
+            proxy_pass http://localhost:4173/download/;
         }
         
         location /api/weather {
