(feat) add hsts

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,11 +22,16 @@ http {
     gzip  on;
 
     server {
+    
         listen       443 ssl http2;
         server_name  localhost;
         ssl_certificate /app/certs/fort.crt;
         ssl_certificate_key /app/certs/fort.key;
         ssl_protocols       TLSv1.1 TLSv1.2 TLSv1.3;
+        
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains";
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
 
         location / {
             proxy_cache cache;
