--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"cookie": "^0.5.0",
 		"diff": "^5.1.0",
 		"ioredis": "^5.2.4",
 		"jsonwebtoken": "^8.5.1",
