--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3'
 
 services:
   www:
-    build: .
+    build:
+      context: .
+      args: # these are where you set the environment variables
+        # location of all files
+        - STORAGE_PATH=/app/storage
+        # location info for weather
+        - LAT=0.00
+        - LON=0.00
+    
     ports:
       - 443:443
-    environment:
-      # please for the love of god, change this
-      - ADMIN_LOGIN=admin:admin
-      # location of all files
-      - STORAGE_PATH=/app/storage
-      # location info for weather
-      - LAT=0.00
-      - LON=0.00
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
   redis:
