(fix) caching broke login

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,29 +34,16 @@ http {
         add_header X-Content-Type-Options nosniff;
 
         location / {
-            proxy_cache cache;
-            proxy_cache_valid any 1m;
-        
             proxy_pass  http://localhost:4173;
         }
         
-        location /_app/ {
-            proxy_cache cache;
-            proxy_cache_valid any 30m;
-            add_header Cache-Control "public, max-age=1800";
+        #location /_app/ {
+        #    proxy_cache cache;
+        #    proxy_cache_valid any 30m;
+        #    add_header Cache-Control "public, max-age=1800";
             
-            proxy_pass http://localhost:4173/_app/;
-        }
-        
-        location /download/ {
-            proxy_cache cache;
-            proxy_cache_valid any 0s;
-        
-            add_header Cache-Control "no-cache";
-            add_header Cache-Control "Expire: 0";
-            
-            proxy_pass http://localhost:4173/download/;
-        }
+        #    proxy_pass http://localhost:4173/_app/;
+        #}
         
         location /api/weather {
             proxy_cache cache;
