--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
         # location info for weather
         - LAT=0.00
         - LON=0.00
-    
     ports:
       - 443:443
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+    restart: unless-stopped
   redis:
     image: redis:alpine
     restart: unless-stopped
